tests/parser/bad/unbalanced_brace.hel
// @name unbalanced_brace
// @phase parser
// @expect error

x = {
    a = 1;
